--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bidding</string>
+    <string name="app_name">Money Game</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_home">Home</string>
 
