--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,10 @@
     <!--get specific transaction-->
     <string name="get_specific_transaction">http://46.101.6.171/moneygame/api/players/accountsPlayerByTransactionId?transaction_id=</string>
 
+    <!-- Cricket URLS-->
+    <!-- Get cricket match list-->
+    <string name="get_match_list">http://46.101.6.171/moneygame/api/cricket/getCricketMatchList</string>
+
     <string name="title_activity_tansaction_wise_history">Tansaction History</string>
     <string name="title_activity_transaction_indetail">Transaction Details</string>
     <string name="title_activity_notification_">Notification_Activity</string>
