--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Money Play</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_home">Home</string>
+    <string name="title_activity_home">Lottery</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -106,14 +106,18 @@
     <string name="get_cricket_odds_with_id">http://46.101.6.171/moneygame/api/cricket/getCricketOddsWithMatchId</string>
     <string name="cancel_cricket_bet">http://46.101.6.171/moneygame/api/cricket/cancelCricketBet</string>
     <string name="live_score">http://46.101.6.171/moneygame/api/cricket/getMatchLiveScore?match_id=</string>
+    <string name="cricket_account">http://46.101.6.171/moneygame/api/cricket/accountsPlayerByWeek?player_id=</string>
+    <string name="cricket_daily">http://46.101.6.171/moneygame/api/cricket/accountsPlayerByDate?player_id=</string>
+    <string name="match_wise">http://46.101.6.171/moneygame/api/cricket/accountsPlayerBymatch?player_id=</string>
 
     <string name="title_activity_tansaction_wise_history">Transaction History</string>
     <string name="title_activity_transaction_indetail">Transaction Details</string>
-    <string name="title_activity_notification_">Notification_Activity</string>
-    <string name="title_activity_main_page">MainPage</string>
-    <string name="title_activity_play_details">PlayDetails</string>
-    <string name="title_activity_more_games">MoreGames</string>
-    <string name="title_activity_game_type_details">GameTypeDetails</string>
-    <string name="title_activity_screen_slide">ScreenSlide</string>
+    <string name="title_activity_notification_">Notification</string>
+    <string name="title_activity_main_page">Cricket</string>
+    <string name="title_activity_play_details">Play Details</string>
+    <string name="title_activity_more_games">More Games</string>
+    <string name="title_activity_game_type_details">Game Type Details</string>
+    <string name="title_activity_screen_slide">Cricket Games</string>
+    <string name="title_activity_cricket_transaction">Cricket Transaction</string>
     <!--http://46.101.6.171/moneygame/-->
 </resources>
