--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="title_activity_single__bet">Single_Bet</string>
+    <string name="title_activity_single__bet">Single Bet</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -23,11 +23,11 @@
     <string name="internet_err">Internet connection not present!!!</string>
     <string name="invalid_user">You are not valid user</string>
     <string name="invalid_username_pass">Invalid username or password</string>
-    <string name="title_activity_match_details">Match_details</string>
+    <string name="title_activity_match_details">Match Details</string>
     <string name="prefrence">UserPrefrence</string>
     <string name="title_activity_table_main">TableMain</string>
     <string name="title_activity_landing_screen">LandingScreen</string>
-    <string name="title_activity_result_chart">result_chart</string>
+    <string name="title_activity_result_chart">Chart</string>
 
     <!--Api Urls-->
     <!--login api
