--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,6 @@
     <string name="title_activity_cricket_transaction">Cricket Transaction</string>
     <string name="title_activity_upcoming_list">Upcoming List</string>
     <string name="title_activity_match_score_card">MatchScoreCard</string>
-    <string name="title_activity_container_score_card">Container_score_card</string>
+    <string name="title_activity_container_score_card">Score Card</string>
     <!--http://46.101.6.171/moneygame/-->
 </resources>
