Changes for multiple bet time n added 2 games

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,22 @@ IT. THIS GAME WILL CLOSE BEFORE MATCH START</string>
 
 THIS GAME WILL CLOSE BEFORE MATCH START.</string>
 
+    <string name="make30"><b>TO MAKE 30</b> – PREDICT HOW MANY PLAYERS WILL SCORE BETWEEN 30 TO 49 AND BET CHIPS ON IT
+
+    THIS GAME WILL CLOSE BEFORE INNINGS START</string>
+
+    <string name="make50"><b>TO MAKE 50</b> – PREDICT HOW MANY PLAYERS WILL SCORE BETWEEN 50 TO 99 AND BET CHIPS ON IT
+
+    THIS GAME WILL CLOSE BEFORE INNINGS START</string>
+
+    <string name="make100"><b>TO MAKE 100</b> – PREDICT HOW MANY PLAYERS WILL SCORE CENTURY AND BET CHIPS ON IT
+
+    THIS GAME WILL CLOSE BEFORE INNINGS START</string>
+
+    <string name="innrun"><b>INNINGS RUNS</b> -PRDICT  TOTAL  INNINGS RUNS FOR BOTH TEAMS AND BET CHIPS ON IT
+
+    THIS GAME WILL CLOSE IN MID INNINGS.</string>
+
 <string name="cncl">IF MATCH IS ABANDONED OR CANCELLED THE CHIPS WILL BE CREDITED BACK TO PLAYER.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
